--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.13",
     "typedoc": "^0.25.12",
+    "typedoc-plugin-markdown": "^4.3.1",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.7.0",
     "vite": "^5.4.8",
